# lerobot-fast

src/lerobot/policies/pi0/: flex_attention.py
src/lerobot/policies/pi0/cpp/: CMakeLists.txt  __init__.py
src/lerobot/policies/pi0/cpp/include/pi0/: config.h  model.h  pi0.h
src/lerobot/policies/pi0/cpp/src/: bindings.cpp  flex_attention.cpp  model.cpp  pi0.cpp
src/lerobot/policies/pi0/cpp/src/cuda/: flex_attention.cu
tests/policies/: test_flex_attention.py
